    output parsing regex to avoid false-positive
    misdetections.  Thanks to Christoph Biedl for the
    suggestion.  (Closes: #931996)
  * dh_strip: Ditto.
  * dh_installman: Improve documentation to be more clear
    about exactly which new features dh_installman got in
    compat 11.  Thanks to Laurent Bigonville for pointing
    out the issue.  (Closes: #912999)

  [ Helmut Grohne ]
  * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
    (Closes: #926815)

  [ Translations ]
  * Update Portuguese translation (Américo Monteiro)  (Closes: #886279)


 -- Niels Thykier <niels@thykier.net>  Mon, 25 Feb 2019 07:23:03 +0000

debhelper (12.1.1) unstable; urgency=medium

  * dh_installinitramfs: Install hooks as executable rather than
    plan files.  Thanks to Thorsten Glaser for the report.
    (Closes: #922990)
  * dh_compress: Fix bug where examples where compressed when a
    doc package shipped examples for another package.  Thanks to
    Christian Kastner for reporting this.  (Closes: #922795)

 -- Niels Thykier <niels@thykier.net>  Sat, 23 Feb 2019 13:24:47 +0000

debhelper (12.1) unstable; urgency=medium

  [ Xavier Guimard ]
  * dh_fixperms: add .node in mode_0644_patterns.

  [ Sylvestre Ledru ]
  * dh_strip: Print a warning when an ELF binary does not have a
    build-id (or when dh_strip cannot find it).

  [ Niels Thykier ]
  * Dh_Lib.pm: Strip leading and trailing whitespace from lines in
    regular debhelper config files.  Whitespace-only lines from
    executable config files are now explicitly detected and triggers
    a human readable error message early rather than warnings/errors
    about uninitialized variables.   Thanks to Ben Finney for the
    suggestion and the initial patch.  (Closes: #919853)
  * meson.pm: Dump "meson-logs/testlog.txt" if testing fails with
    an error.  Thanks to Jeremy Bicha for the suggestion.
    (Closes: #918066)
  * dh_missing: Clarify the documentation about when -X with other