@@ -33,6 +33,10 @@ debhelper (12.1.2) UNRELEASED; urgency=medium
     about exactly which new features dh_installman got in
     compat 11.  Thanks to Laurent Bigonville for pointing
     out the issue.  (Closes: #912999)
+  * dh_strip: Pass --no-sandbox to file(1) when run under
+    fakeroot and file(1) appear to support the option.
+    Thanks to Christoph Biedl for requesting the feature.
+    (Closes: #932006)
 
   [ Helmut Grohne ]
   * Buildsystem/cmake: Fix CMAKE_SYSTEM_PROCESSOR for mips64el.
